2006-12-12  Thomas Moschny  <thomas.moschny@gmx.de>

	* HACKING: Updated "Patch submission guidelines" section.

2006-12-11  Ben Walton  <bdwalton@gmail.com>
 
        * cmd_ws_commit.cc,
        tests/commit_using__MTN_log/commit_log_modified_return.lua,
        tests/commit_using__MTN_log/__driver__.lua:
        Added the requirement that when _MTN/log is pre-specified by
        the user, that the user remove a 'magic' line prior to the
        commit being accepted.  Modified the units tests to verify this.
        Updated texinfo to match this new behaviour.

2006-12-10  Timothy Brownawell <tbrownaw@gmail.com>

	Implement a "mtn log --to <revision>", that doesn't log the
	revisions that would be logged when <revision> was given as
	the starting revision.

2006-12-09  Richard Levitte  <richard@levitte.org>

	* tests/netsync_permissions_wildcards/__driver__.lua:
	Don't forget to get() read-permissions and write-permissions.
	Also, netsync.start should use the full blown netsync.lua,
	not the minimal start.

2006-12-09  Richard Levitte  <richard@levitte.org>

	* tests/netsync_permissions_wildcards/__driver__.lua,
	tests/netsync_permissions_wildcards/read-permissions,
	tests/netsync_permissions_wildcards/write-permissions,
	testsuite.lua: Test how well netsync works when read-permissions
	contains wildcards as part of the pattern.

2006-12-08  Richard Levitte  <richard@levitte.org>

	* INSTALL: A build failure showed me I needed to install
	libboost-serialization-dev, so let's share that information.

2006-12-07  Thomas Moschny  <thomas.moschny@gmx.de>

	* database.cc (delete_existing_rev_and_certs): When killing a
	revision, also remove it's height from the database.

2006-12-06  Thomas Keller <me@thomaskeller.biz>

	Existing test for previous change in author cert selection
	tweaked (previously b_and_t_selector_globbing)

2006-12-06  Timothy Brownawell  <tbrownaw@gmail.com>

	Version 1.34 of boost changes some things. In particular fs::path