@@ -4184,6 +4184,12 @@ workspace, monotone will use the work list to build a new revision,
 which it will then commit to the database. The new revision will have
 any added entries inserted in its manifest.
 
+@item mtn [--no-respect-ignore] mkdir @var{directory...}
+This command creates a directory in the filesystem relative to your
+current location and adds it to your workspace's ``work list''.  The
+changes are not reflected in your database until such time as you
+perform a commit.  If you use the @option{--no-respect-ignore} flag,
+entries in .mtn-ignore will not be honoured.
 
 @item mtn [--execute] drop @var{pathname...}
 @itemx mtn drop --missing
