@@ -1,3 +1,10 @@
+2006-12-12  Ben Walton  <bdwalton@gmail.com>
+ 
+        * cmd_ws_cc: Added mtn mkdir
+        * testsuite.lua: added mtn mkdir test
+        * included tests/mkdir as unit testing for mtn mkdir
+        * added documentation to monotone.texi
+
 2006-12-12  Thomas Moschny  <thomas.moschny@gmx.de>
 
 	* HACKING: Updated "Patch submission guidelines" section.
